INTYG-3840: Fixat multiline problem i tabeller och fk7263

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvEnumValue/uvEnumValue.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvEnumValue/uvEnumValue.directive.html
@@ -1,7 +1,7 @@
 <div class="uv-enum-value-template">
     <h4 ng-if="config.labelKey"><span ng-attr-id="{{config.type + '-label-' + config.labelKey | uvDomIdFilter}}"
                                       dynamic-label key="{{ config.labelKey }}"></span></h4>
-    <span ng-attr-id="{{config.modelProp | uvDomIdFilter}}" class="value multiline">
+    <span ng-attr-id="{{config.modelProp | uvDomIdFilter}}" class="value">
       {{::value}}
       <uv-no-value ng-if="!hasValue()"></uv-no-value>
     </span>
