--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -31,17 +31,17 @@
 @import 'components/miCertificateActionButtons/miCertificateActionButtons.directive.scss';
 @import 'components/miCompactCertificateBody/miCompactCertificateBody.directive.scss';
 @import 'components/miCompactCertificateHeader/miCompactCertificateHeader.directive.scss';
-@import 'components/unified-view/components/uvAlertValue/uvAlertValue.directive.scss';
-@import 'components/unified-view/components/uvBooleanValue/uvBooleanValue.directive.scss';
-@import 'components/unified-view/components/uvDelFraga/uvDelFraga.directive.scss';
-@import 'components/unified-view/components/uvEnumValue/uvEnumValue.directive.scss';
-@import 'components/unified-view/components/uvFraga/uvFraga.directive.scss';
-@import 'components/unified-view/components/uvKategori/uvKategori.directive.scss';
-@import 'components/unified-view/components/uvKodverkValue/uvKodverkValue.directive.scss';
-@import 'components/unified-view/components/uvList/uvList.directive.scss';
-@import 'components/unified-view/components/uvNoValue/uvNoValue.directive.scss';
-@import 'components/unified-view/components/uvSimpleValue/uvSimpleValue.directive.scss';
-@import 'components/unified-view/components/uvSkapadAv/uvSkapadAv.directive.scss';
-@import 'components/unified-view/components/uvTable/uvTable.directive.scss';
-@import 'components/unified-view/components/uvTillaggsfragor/uvTillaggsfragor.directive.scss';
+@import '../app-shared/unified-view/components/uvAlertValue/uvAlertValue.directive';
+@import '../app-shared/unified-view/components/uvBooleanValue/uvBooleanValue.directive';
+@import '../app-shared/unified-view/components/uvDelFraga/uvDelFraga.directive';
+@import '../app-shared/unified-view/components/uvEnumValue/uvEnumValue.directive';
+@import '../app-shared/unified-view/components/uvFraga/uvFraga.directive';
+@import '../app-shared/unified-view/components/uvKategori/uvKategori.directive';
+@import '../app-shared/unified-view/components/uvKodverkValue/uvKodverkValue.directive';
+@import '../app-shared/unified-view/components/uvList/uvList.directive';
+@import '../app-shared/unified-view/components/uvNoValue/uvNoValue.directive';
+@import '../app-shared/unified-view/components/uvSimpleValue/uvSimpleValue.directive';
+@import '../app-shared/unified-view/components/uvSkapadAv/uvSkapadAv.directive';
+@import '../app-shared/unified-view/components/uvTable/uvTable.directive';
+@import '../app-shared/unified-view/components/uvTillaggsfragor/uvTillaggsfragor.directive';
 // endinjector
