INTYG-4890: Flyttade webcerts scssfiler till ett mer minaintygliknande upplägg. Delar scss variabler på ett bättre sätt.

--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvSkapadAv/uvSkapadAv.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvSkapadAv/uvSkapadAv.directive.scss
@@ -4,8 +4,8 @@ uv-skapad-av {
 
   .uv-skapad-av-body {
     padding-top: 20px;
-    background: $mi-intyg-header-bg;
-    color: $mi-intyg-header-color;
+    background: $uv-intyg-header-bg;
+    color: $uv-intyg-header-color;
     padding: 30px;
     margin: 0;
 
