INTYG-4089: Fixat scss paths

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/css/fk7263.scss
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/css/fk7263.scss
@@ -29,6 +29,6 @@
   padding-top:10px;
 }
 
-@import "../js/directives/fkList/fkList.directive";
-@import "../js/directives/fkUvBooleanValue/fkUvBooleanValue.directive";
-@import "../js/directives/fkUvTable/fkUvTable.directive";
+@import "../../app-shared/directives/fkList/fkList.directive";
+@import "../../app-shared/directives/fkUvBooleanValue/fkUvBooleanValue.directive";
+@import "../../app-shared/directives/fkUvTable/fkUvTable.directive";
