--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -44,6 +44,16 @@
   @import 'components/_wc-header.scss';
   @import 'components/_wc-table-head.scss';
   @import 'components/_wc-vardenhet-selector.scss';
+  @import 'fk/arenden/_arende.scss';
+  @import 'fmb/_fmb.scss';
+  @import 'gui/formly/diagnos.scss';
+  @import 'gui/formly/prognos.scss';
+  @import 'gui/formly/sjukskrivningar.scss';
+  @import 'gui/formly/underlag.scss';
+  @import 'gui/wcHelpChevron.directive.scss';
+  @import 'gui/wcHelpChevronText.directive.scss';
+  @import 'gui/wcIntegrationEnhetSelector/_wcIntegrationEnhetSelector.directive.scss';
+  @import 'gui/wcIntygRelatedOtherIntygMessage.directive.scss';
   // endinjector
 
   //colors
