--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/_variables.scss
@@ -21,7 +21,7 @@
 
 $uv-body-bg: #f3f4f6;
 $uv-spinner-color: #0F6EDC;
-$uv-intyg-body-bg: none;
+$uv-intyg-body-bg: #e5e5e5;
 $uv-box-shadow-color: #ddd;
 $uv-intyg-header-bg: none;
 $uv-intyg-header-color: #008391;
