--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/_wc-uv-override.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/_wc-uv-override.scss
@@ -1,7 +1,3 @@
-uv-kategori h2 {
-  padding: 20px 0 0 0;
-}
-
 uv-fraga {
   h3 {
     padding-top: 15px;
@@ -14,10 +10,15 @@ uv-del-fraga h4 {
   color: #000;
 }
 
-uv-kategori .kategori-body {
-  padding: 12px 14px 12px 14px;
-  background: #e5e5e5;
-  border-radius: 4px;
-  margin-top: 10px;
-  box-shadow: none;
+uv-kategori, uv-wc-kategori {
+  h2 {
+    padding: 20px 0 0 0;
+  }
+
+  .kategori-body {
+    padding: 12px 14px 12px 14px;
+    border-radius: 4px;
+    margin-top: 10px;
+    box-shadow: none;
+  }
 }
