INTYG-4045: Anpassat några av tabellerna för mobiler

--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/_variables.scss
@@ -23,5 +23,8 @@ $uv-intyg-header-bg: #43799A !default;
 $uv-intyg-header-color: #fff !default;
 $uv-box-shadow-color: #ddd !default;
 
+$uv-intyg-table-bg: #fff !default;
+$uv-intyg-table-bg-accent: #eee !default;
+
 // App shared variables
 $text-muted: #666;
