--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvTable/uvTable.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvTable/uvTable.directive.scss
@@ -24,4 +24,23 @@ uv-table {
   .table {
     margin: 0;
   }
+
+  .mobile-table-wrapper {
+    .mobile-table {
+      display: table;
+      width: 100%;
+    }
+
+    > .mobile-table:nth-of-type(even) {
+      background-color: $uv-intyg-table-bg;
+    }
+
+    > .mobile-table:nth-of-type(odd) {
+      background-color: $uv-intyg-table-bg-accent;
+    }
+
+    .row {
+      margin: 15px 0;
+    }
+  }
 }
