INTYG-4096: Stylat uv så det ser bättre ut i webcert

--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvDelFraga/uvDelFraga-wc.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvDelFraga/uvDelFraga-wc.directive.html
@@ -2,7 +2,7 @@
                                   dynamic-label key="{{ config.labelKey }}"></span></h4>
 
 <div ng-if="viewData" ng-repeat="itemConfig in config.components | filter : { modelProp : '!!' }">
-  <uv-komplettering field-key="itemConfig.modelProp" margin-bottom="true"></uv-komplettering>
+  <uv-komplettering field-key="itemConfig.modelProp" margin-top="true"></uv-komplettering>
 </div>
 
 <div class="body">
