--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/_wc-uv-override.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/_wc-uv-override.scss
@@ -1,6 +1,7 @@
 uv-fraga {
   h3 {
-    padding-top: 15px;
+    padding-top: 20px;
+    padding-bottom: 0;
   }
 
   margin-bottom: 15px;
@@ -8,17 +9,30 @@ uv-fraga {
 
 uv-del-fraga h4 {
   color: #000;
+  padding-bottom: 0;
 }
 
-uv-kategori, uv-wc-kategori {
+uv-kategori {
   h2 {
-    padding: 20px 0 0 0;
+    padding: 0 0 0 0;
   }
 
   .kategori-body {
-    padding: 12px 14px 12px 14px;
+    padding: 0 14px 12px 14px;
     border-radius: 4px;
     margin-top: 10px;
     box-shadow: none;
+  }
+}
+
+uv-table {
+  .table {
+    > thead > tr > th,
+    > thead > tr > td,
+    > tbody > tr > th,
+    > tbody > tr > td {
+      padding: 8px;
+      vertical-align: top;
+    }
   }
 }
