--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvWcKategori/uvWcKategori.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvWcKategori/uvWcKategori.directive.scss
@@ -6,13 +6,13 @@ uv-wc-kategori {
     font-size: 18px;
     background: $uv-intyg-header-bg;
     color: $uv-intyg-header-color;
-    padding: 20px 0 0 0;
+    padding: 0 0 0 0;
     margin: 0;
   }
 
   .kategori-body {
     background: $uv-intyg-body-bg;
-    padding: 12px 14px 12px 14px;
+    padding: 0 14px 12px 14px;
     border-radius: 4px;
     margin-top: 10px;
     box-shadow: none;
