INTYG-4095: Använder wc-kategori och del-fraga template för tilläggsfrågor

--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvTillaggsfragor/uvTillaggsfragor.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvTillaggsfragor/uvTillaggsfragor.directive.html
@@ -1,4 +1,4 @@
 <div class="uv-tillaggsfragor" ng-if="tillaggsConfig">
-  <uv-kategori config="tillaggsConfig" view-data="viewData"></uv-kategori>
+  <uv-dynamic-component config="tillaggsConfig" view-data="viewData"></uv-dynamic-component>
 </div>
 
