INTYG-4090: Lagt in rubriker för fk7263

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/css/fk7263.scss
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/css/fk7263.scss
@@ -95,4 +95,9 @@ This is to avoid leaking module specific style rules outside of it's intended co
 
 }
 
+fk7263-list {
+  ul {
+    padding-left: 16px;
+  }
+}
 
