INTYG-4181: i princip kopierat FMB och gjort en grund för SRS av den

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
@@ -5,7 +5,8 @@
        field-has-errors="viewState.common.validation.messagesGrouped.diagnos"
        id="diagnoseForm">
 
-    <wc-fmb-help-display related-form-id="FALT2" fmb-states="fmbViewState" field-name="DIAGNOS">
+      <wc-fmb-help-display related-form-id="FALT2" fmb-states="fmbViewState" field-name="DIAGNOS">
+      <wc-srs-help-display related-form-id="FALT2" fmb-states="fmbViewState" field-name="DIAGNOS">
 
       <div class="row bottom-padding-medium">
         <div class='col-xs-12'>
