--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -101,6 +101,7 @@
   @import 'components/_wc-vardenhet-selector.scss';
   @import 'fk/arenden/_arende.scss';
   @import 'fmb/_fmb.scss';
+  @import 'srs/_srs.scss';
   @import 'gui/formly/diagnos.scss';
   @import 'gui/formly/prognos.scss';
   @import 'gui/formly/sjukskrivningar.scss';
