INTYG-4181: i princip kopierat FMB och gjort en grund för SRS av den

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -102,6 +102,7 @@
   @import 'components/_wc-vardenhet-selector.scss';
   @import 'fk/arenden/_arende.scss';
   @import 'fmb/_fmb.scss';
+  @import 'srs/_srs.scss';
   @import 'gui/formly/diagnos.scss';
   @import 'gui/formly/dodsorsak.scss';
   @import 'gui/formly/prognos.scss';
