INTYG-4100: Visar ny kompletteringsindikator på frågenivå i wc-uv ramverket. Nytt direktiv wc-inline-kompettering som visar själva kompletteringstexten vid frågan och inte bara en blå ruta.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/_wc-uv-override.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/_wc-uv-override.scss
@@ -1,11 +1,15 @@
-uv-fraga {
-  h3 {
-    padding-top: 20px;
-    padding-bottom: 0;
+uv-kategori {
+  h2 {
+    padding: 15px 0 10px 0;
   }
-
-  margin-bottom: 15px;
+  .kategori-body {
+    background: $uv-intyg-body-bg;
+    padding: 0;
+    box-shadow: none;
+    border-radius: 4px;
+  }
 }
+
 
 uv-del-fraga h4 {
   color: #000;
