INTYG-4277: fältnr i rubriker även i uv-wc, rättning av missade scss regler

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/app-shared/directives/fkUvTable/fkUvTable.directive.scss
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/app-shared/directives/fkUvTable/fkUvTable.directive.scss
@@ -17,7 +17,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-uv-table {
+fk-uv-table {
   display: block;
   padding-top: 5px;
 
