--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvWcFraga/uvWcFraga.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvWcFraga/uvWcFraga.directive.scss
@@ -10,7 +10,7 @@ uv-wc-fraga {
 
   .fraga-body {
     background: $uv-intyg-body-bg;
-    padding: 0 0 15px 20px;
+    padding: 0 20px 20px 20px;
     border-radius: 4px;
     box-shadow: none;
   }
