INTYG-4101: Varningsmeddelande för kompleteringar utkastvy fk7263

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.html
@@ -20,6 +20,9 @@
              show-content="viewState.common.doneLoading">
 
           <div id="certificate" class="certificate certificate--lg">
+
+            <wc-intyg-has-komplettering-message></wc-intyg-has-komplettering-message>
+
             <div class="intyg-body">
 
               <!-- 1. Smittskydd -->
