INTYG-4277: Infört saknat uv-boolean-statement komponent för att särskilja på obligatoriska och frivilliga booleanfält (text smittskydd). uv-boolean-value visar nu ej angivet om ej true/false. uv-boolean-statement defaultar till false om ej angivet (kryssat)

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -23,6 +23,7 @@
 // injector
 @import '../app-shared/unified-view/components/_variables.scss';
 @import '../app-shared/unified-view/components/uvAlertValue/uvAlertValue.directive.scss';
+@import '../app-shared/unified-view/components/uvBooleanStatement/uvBooleanStatement.directive.scss';
 @import '../app-shared/unified-view/components/uvBooleanValue/uvBooleanValue.directive.scss';
 @import '../app-shared/unified-view/components/uvDelFraga/uvDelFraga.directive.scss';
 @import '../app-shared/unified-view/components/uvEnumValue/uvEnumValue.directive.scss';
