--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvBooleanStatement/uvBooleanStatement.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvBooleanStatement/uvBooleanStatement.directive.scss
@@ -1,4 +1,4 @@
-/*
+/*!
  * Copyright (C) 2017 Inera AB (http://www.inera.se)
  *
  * This file is part of sklintyg (https://github.com/sklintyg).
@@ -17,25 +17,18 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-angular.module('common').directive('uvBooleanValue', [ '$filter', 'uvUtil', function($filter, uvUtil) {
-    'use strict';
+uv-boolean-statement {
+  display: block;
 
-    return {
-        restrict: 'E',
-        scope: {
-            config: '=',
-            viewData: '='
-        },
-        templateUrl: '/web/webjars/common/app-shared/unified-view/components/uvBooleanValue/uvBooleanValue.directive.html',
-        link: function($scope) {
+  h4 {
+    font-size: 14px;
+    padding-top: 15px;
+    margin: 0;
+    color: #666;
+  }
 
-            $scope.value = uvUtil.getValue($scope.viewData, $scope.config.modelProp);
-
-
-            $scope.hasStrictBooleanValue = function() {
-                return $scope.value === true || $scope.value === false;
-            };
-
-        }
-    };
-} ]);
+  .value {
+    display: inline-block;
+    padding-top: 5px;
+  }
+}
