--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvBooleanValue/uvBooleanValue.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvBooleanValue/uvBooleanValue.directive.html
@@ -1,3 +1,6 @@
-<h4 ng-if="config.labelKey"><span ng-attr-id="{{config.type + '-label-' + config.labelKey | uvDomIdFilter}}" dynamic-label key="{{ config.labelKey }}"/></h4>
-<span ng-attr-id="{{config.modelProp | uvDomIdFilter}}" class="value">{{getValue()}}</span>
-<!-- uv-boolean-value currently has no support for uv-no-value, since undefined value is displayed as Nej -->
+<h4 ng-if="config.labelKey"><span ng-attr-id="{{config.type + '-label-' + config.labelKey | uvDomIdFilter}}" dynamic-label key="{{ config.labelKey }}" /></h4>
+<span ng-attr-id="{{config.modelProp | uvDomIdFilter}}" class="value">
+  <span ng-if="hasStrictBooleanValue()">{{value | uvBoolFilter}}</span>
+  <uv-no-value ng-if="!hasStrictBooleanValue()"></uv-no-value>
+</span>
+
