INTYG-4287: ts-bas observandum i signerat intyg visas nu villkorat som i gamla visningen.

--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvAlertValue/uvAlertValue.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvAlertValue/uvAlertValue.directive.html
@@ -1,5 +1,5 @@
-<div id="{{config.labelKey}}" class="uv-alert-value-template">
+<div class="uv-alert-value-template" ng-if="showMessage()">
   <div class="alert alert-{{config.alertLevel}}">
-    <span id="{{config.labelKey}}-text" dynamic-label key="{{ config.labelKey }}"></span>
+    <span ng-attr-id="{{'uv-alert-value-' + config.labelKey | uvDomIdFilter}}" dynamic-label key="{{ config.labelKey }}"></span>
   </div>
 </div>
