--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/wcFraga.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/wcFraga.scss
@@ -17,11 +17,6 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-wc-fraga-komplettering {
-
-    .komplettering-active {
-        border: 3px solid #FFC822;
-        border-radius: 4px;
-        margin-bottom: 1px;
-    }
+.wc-fraga {
+  padding: 12px 14px 12px 14px;
 }
