INTYG-4104: Lite städ och layout.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFragaKomplettering.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFragaKomplettering.directive.scss
@@ -19,9 +19,14 @@
 
 wc-fraga-komplettering {
 
-    .komplettering-active {
-        border: 3px solid #FFC822;
-        border-radius: 4px;
-        margin-bottom: 1px;
-    }
+  .komplettering-active {
+    border: 3px solid #FFC822;
+    border-radius: 4px;
+    margin-bottom: 1px;
+  }
+
+  wc-inline-komplettering .alert {
+    margin: 12px 0 0 0;
+  }
+
 }
