DEVENV: Fixade saknad padding på legacyintyg efter 4104.

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.html
@@ -11,7 +11,7 @@
   </div>
 
   <!-- FK 7263 -->
-  <div class="edit-form">
+  <div class="edit-form legacy-intyg">
 
     <form name="certForm" novalidate autocomplete="off" wc-auto-save>
       <div ng-hide="viewState.common.error.activeErrorMessageKey || viewState.common.deleted">
