--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/utkast.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/utkast.html
@@ -34,7 +34,7 @@
       </div>
 
       <!-- TS-DIABETES -->
-      <div class="edit-form" ng-class="{'collapsed' : viewState.common.collapsedHeader}" wc-size-target>
+      <div class="edit-form legacy-intyg" ng-class="{'collapsed' : viewState.common.collapsedHeader}" wc-size-target>
 
         <form id="certForm" name="certForm" novalidate autocomplete="off" wc-auto-save="save(true)">
           <div ng-hide="viewState.common.error.activeErrorMessageKey">
