--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -197,6 +197,10 @@ a {
     border-radius: 4px 4px 4px 4px;
 }
 
+.legacy-intyg .intyg-block__content {
+    padding: 12px 14px 12px 14px;
+}
+
 .intyg-block {
     margin: 0 0px 0px 0;
     padding-bottom: 20px;
