--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/vanliga-fragor-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/vanliga-fragor-partial.html
@@ -8,15 +8,13 @@
     <h4>Finns det någon hjälpfunktion?</h4>
 
     <p>
-      I anslutning till vissa rubriker och frågor finns en kort hjälptext som kan fällas ut.
-    </p>
+      I anslutning till vissa rubriker och frågor finns en kort hjälptext som kan fällas ut. </p>
 
     <h4>Hur kan jag få hjälp med bedömningar av funktionsnedsättning och aktivitetsbegränsning?</h4>
 
     <p>
       Socialstyrelsens försäkringsmedicinska beslutsstöd (FMB) finns tillgängligt i Webcert för
-      de fält som berörs när du anger en diagnos.
-    </p>
+      de fält som berörs när du anger en diagnos. </p>
 
     <h4>Hur använder jag mig av Socialstyrelsens försäkringsmedicinska beslutsstöd (FMB)?</h4>
 
@@ -29,11 +27,10 @@
       och sjukskrivningsrekommendationer för ett hundratal diagnoser. Sjukskrivningsrekommendationerna
       ska vara vägledande för bedömning av arbetsförmågan, men bedömningarna måste vara individuella och
       utgå ifrån enskilda individers unika tillstånd. Om sjukskrivningen omfattar längre tid än den
-      rekommenderade ska det motiveras.
-    </p>
+      rekommenderade ska det motiveras. </p>
     <p>
-      För ytterligare information om hur FMB ska användas klicka <span dynamiclink key="socialstyrelsenFmbAnvandas"></span>.
-    </p>
+      För ytterligare information om hur FMB ska användas klicka <span dynamiclink
+                                                                       key="socialstyrelsenFmbAnvandas"></span>. </p>
 
     <h4>Vad är skillnaden mellan ett intyg och ett utkast?</h4>
 
@@ -41,12 +38,10 @@
       Ett utkast är inte signerat och behöver inte innehålla alla uppgifter som är obligatoriska vid signering.
       Du kan spara och ändra i det så många gånger du vill. Ett utkast går även att radera och tas då bort.
       Vid signering övergår utkastet till att bli ett intyg. I samband med att intyget signeras skickas det
-      till Intygstjänsten och kan då nås av patienten via Mina intyg.
-    </p>
+      till Intygstjänsten och kan då nås av patienten via Mina intyg. </p>
     <p>
       Ett signerat intyg kan inte ändras eller raderas, däremot kan ett intyg ersättas av ett nytt intyg.
-      Ett intyg kan också vid allvarligt fel makuleras (ogiltigförklaras).
-    </p>
+      Ett intyg kan också vid allvarligt fel makuleras (ogiltigförklaras). </p>
 
     <h4>Tangentbordsnavigering i Webcert</h4>
 
@@ -54,16 +49,37 @@
       I Webcert stöds navigering med hjälp av tangentbordet. Webcert följer den standard som finns för
       webbläsare och du kan använda "Tab" för att hoppa mellan ifyllnadsrutor i ett intygsutkast. I de
       fall ett fält utgörs av val i form av radioknappar används tangentbordets piltangenter för att navigera
-      mellan valen. För att markera ett val i en kryssruta eller radioknapp använd "Mellanslag"-tangenten.
-    </p>
+      mellan valen. För att markera ett val i en kryssruta eller radioknapp använd "Mellanslag"-tangenten. </p>
 
     <h4>Finns det några kortkommandon?</h4>
 
     <p>
       Vid ifyllnad av sjukskrivningsperiod. När du fyllt i ett 'från och med' datum kan du i
       'till och med' datumet skriva in exempel 5d, 5v eller 5m. Då sätts slutdatum för perioden
-      automatiskt till 5 dagar/veckor/månader efter 'från och med' datumet.
+      automatiskt till 5 dagar/veckor/månader efter 'från och med' datumet. </p>
+
+    <!-- Sekretessmarkering -->
+    <h4>Vad innebär det att en patient har en sekretessmarkering?</h4>
+
+    <p>
+      Att en patient har en sekretessmarkering, betyder att Skatteverket har bedömt att patientens personuppgifter är
+      extra viktiga att skydda. Det finns speciella riktlinjer om hur personuppgifter för invånare med
+      sekretessmarkering ska hanteras. I Webcert innebär det att:<br>
+    <ul>
+      <li>Endast läkare och tandläkare kan skapa intyg för dessa patienter.</li>
+      <li>Endast läkare och tandläkare, inloggade på den vårdenhet intyget förskrevs kan se och hantera intyget.</li>
+      <li>Det är synligt i alla bildskärmsfönster att patienten har en sekretessmarkering.</li>
+      <li>En utredning kring intyget och dess mottagare måste ske innan ett intyg kan tillåtas skrivas och skickas
+        elektroniskt. Vilket är orsaken till att alla intyg inte går att utfärda för patienter med sekretessmarkering.
+      </li>
+    </ul>
     </p>
+
+    <h4>Kan jag skriva intyg för en patient med sekretessmarkering? </h4>
+
+    <p>Ja, läkare kan skriva försäkringskassans intyg, dödsbevis och dödsorsaksintyg för patienter med en
+      sekretessmarkering.<br><br>
+      En vårdadministratör kan inte hantera intyg för en patient med sekretessmarkering.</p>
   </div>
 
 
@@ -75,8 +91,7 @@
 
     <p>
       Intyget sparas hela tiden automatiskt under utfärdandet. Om du stänger webbläsaren innan intyget har
-      hunnit sparas får du en varning.
-    </p>
+      hunnit sparas får du en varning. </p>
   </div>
 
 
@@ -87,8 +102,7 @@
     <h4>Varför syns inte skicka-knappen?</h4>
 
     <p>
-      Du har inte signerat intyget, skicka-knappen är endast tillgänglig för ett signerat intyg.
-    </p>
+      Du har inte signerat intyget, skicka-knappen är endast tillgänglig för ett signerat intyg. </p>
 
     <h4>När ska jag skicka intyget till Försäkringskassan?</h4>
 
@@ -109,34 +123,29 @@
     <h4>Hur ställer jag en fråga till Försäkringskassan?</h4>
 
     <p>
-      Funktionen för fråga och svar blir tillgänglig först när intyget är signerat och skickat till Försäkringskassan.
-    </p>
+      Funktionen för fråga och svar blir tillgänglig först när intyget är signerat och skickat till
+      Försäkringskassan. </p>
     <p>
-      Du kan då från samma vy som det signerade intyget klicka på knappen Ny fråga till Försäkringskassan.
-    </p>
+      Du kan då från samma vy som det signerade intyget klicka på knappen Ny fråga till Försäkringskassan. </p>
 
     <h4>Hur vet jag om det har kommit en fråga eller ett svar från Försäkringskassan?</h4>
 
     <p>
-      Om det inkommit en ny fråga syns det som en röd bubbla i hörnet på fliken Fråga och svar.
-    </p>
+      Om det inkommit en ny fråga syns det som en röd bubbla i hörnet på fliken Fråga och svar. </p>
     <p>
       Du som är privatläkare får också ett mejl till den e-post du angav när du registrerade dig till
-      att använda Webcert.
-    </p>
+      att använda Webcert. </p>
 
     <h4>När försvinner frågor från listan under fliken "Frågor och svar"?</h4>
 
     <p>
       En fråga försvinner aldrig från listan över frågor och svar, däremot så visas den inte i listan när den
-      är markerad som hanterad. Det går att söka efter och se en hanterad fråga med hjälp av sökfiltret.
-    </p>
+      är markerad som hanterad. Det går att söka efter och se en hanterad fråga med hjälp av sökfiltret. </p>
 
     <h4>En fråga har besvarats via brev och ligger därmed kvar som obesvarad i Webcert. Hur tar jag bort frågan?</h4>
 
     <p>
-      Klicka i boxen "Markera som hanterad" intill frågan. Frågan flyttas då till Tidigare frågor och svar.
-    </p>
+      Klicka i boxen "Markera som hanterad" intill frågan. Frågan flyttas då till Tidigare frågor och svar. </p>
   </div>
 
   <h3>Tekniska frågor</h3>
@@ -145,8 +154,7 @@
 
   <p>
     För att använda Webcert ska du använda Internet Explorer 9 eller en efterföljande version.
-    Webbläsarna Chrome och Edge stödjer inte den metod som Webcert använder för att skapa signaturer.
-  </p>
+    Webbläsarna Chrome och Edge stödjer inte den metod som Webcert använder för att skapa signaturer. </p>
 </div>
 
 
@@ -163,34 +171,30 @@
     <h4>Hur ställer jag en fråga till Försäkringskassan?</h4>
 
     <p>
-      Funktionen för fråga och svar blir tillgänglig först när intyget är signerat och skickat till Försäkringskassan.<br/>
-      Öppna det intyg du vill ställa en fråga på i Webcert. Klicka på knappen Ny fråga till Försäkringskassan.
-    </p>
+      Funktionen för fråga och svar blir tillgänglig först när intyget är signerat och skickat till
+      Försäkringskassan.<br />
+      Öppna det intyg du vill ställa en fråga på i Webcert. Klicka på knappen Ny fråga till Försäkringskassan. </p>
 
     <h4>Hur vet jag om det har kommit en fråga eller ett svar från Försäkringskassan?</h4>
 
     <p>
-      Om det inkommit en ny fråga syns det som en röd bubbla i hörnet på fliken Fråga och svar.
-    </p>
+      Om det inkommit en ny fråga syns det som en röd bubbla i hörnet på fliken Fråga och svar. </p>
     <p>
       När en fråga eller ett svar inkommit generereras även ett mail till den e-postadress som i HSA är
       registrerad som vårdenhetens/mottagningens e-postadress. Den person som är ansvarig för att fördela
       vårdenhetens inkomna svar, loggar in i Webcert för att antingen själv markera svaret som hanterat eller
-      vidarebefordra frågan/svaret till rätt läkare.
-    </p>
+      vidarebefordra frågan/svaret till rätt läkare. </p>
 
     <h4>När försvinner frågor från listan under fliken "Frågor och svar"?</h4>
 
     <p>
       En fråga försvinner aldrig från listan över frågor och svar, däremot så visas den inte i listan när den
-      är markerad som hanterad. Det går att söka efter och se en hanterad fråga med hjälp av sökfiltret.
-    </p>
+      är markerad som hanterad. Det går att söka efter och se en hanterad fråga med hjälp av sökfiltret. </p>
 
     <h4>En fråga har besvarats via brev och ligger därmed kvar som obesvarad i Webcert. Hur tar jag bort frågan?</h4>
 
     <p>
-      Klicka i boxen "Markera som hanterad" intill frågan. Frågan flyttas då till Tidigare frågor och svar.
-    </p>
+      Klicka i boxen "Markera som hanterad" intill frågan. Frågan flyttas då till Tidigare frågor och svar. </p>
 
     <h3>Tekniska frågor</h3>
 
@@ -198,8 +202,7 @@
 
     <p>
       För att använda Webcert ska du använda Internet Explorer 9 eller en efterföljande version.
-      Webbläsarna Chrome och Edge stödjer inte den metod som Webcert använder för att skapa signaturer.
-    </p>
+      Webbläsarna Chrome och Edge stödjer inte den metod som Webcert använder för att skapa signaturer. </p>
   </div>
 </div>
 
@@ -218,15 +221,13 @@
 
     <p>
       Klicka på frågetecknet i anslutning till vissa rubriker och frågor i utkastet. En kort hjälptext om hur
-      fältet ska fyllas i visas.
-    </p>
+      fältet ska fyllas i visas. </p>
 
     <h4>Hur kan jag få hjälp med bedömningar av funktionsnedsättning och aktivitetsbegränsning?</h4>
 
     <p>
       Socialstyrelsens försäkringsmedicinska beslutsstöd finns tillgängligt i Webcert och visas bredvid de fält
-      som berörs när du anger en diagnos.
-    </p>
+      som berörs när du anger en diagnos. </p>
 
     <h4>Hur använder jag mig av Socialstyrelsens försäkringsmedicinska beslutsstöd (FMB)?</h4>
 
@@ -238,11 +239,10 @@
       på utskrifter. I FMB finns försäkringsmedicinsk information och sjukskrivningsrekommendationer för ett
       hundratal diagnoser. Sjukskrivningsrekommendationerna ska vara vägledande för bedömning av arbetsförmågan,
       men bedömningarna måste vara individuella och utgå ifrån enskilda individers unika tillstånd.
-      Om sjukskrivningen omfattar längre tid än den rekommenderade ska det motiveras.
-    </p>
+      Om sjukskrivningen omfattar längre tid än den rekommenderade ska det motiveras. </p>
     <p>
-      För ytterligare information om hur FMB ska användas klicka <span dynamiclink key="socialstyrelsenFmbAnvandas"></span>.
-    </p>
+      För ytterligare information om hur FMB ska användas klicka <span dynamiclink
+                                                                       key="socialstyrelsenFmbAnvandas"></span>. </p>
 
     <h4>Vad är skillnaden mellan ett intyg och ett utkast?</h4>
 
@@ -250,12 +250,10 @@
       Ett utkast är inte signerat och behöver inte innehålla alla uppgifter som är obligatoriska vid signering.
       Du kan spara och ändra i det så många gånger du vill. Ett utkast går även att radera och tas då bort.
       Vid signering övergår utkastet till att bli ett intyg. I samband med att intyget signeras skickas det till
-      Intygstjänsten och kan då nås av patienten via Mina intyg.
-    </p>
+      Intygstjänsten och kan då nås av patienten via Mina intyg. </p>
     <p>
       Ett signerat intyg kan inte ändras eller raderas, däremot kan ett intyg ersättas av ett nytt intyg. Ett intyg
-      kan också vid allvarligt fel makuleras (ogiltigförklaras).
-    </p>
+      kan också vid allvarligt fel makuleras (ogiltigförklaras). </p>
 
     <h4>Tangentbordsnavigering i Webcert</h4>
 
@@ -263,16 +261,37 @@
       I Webcert stöds navigering med hjälp av tangentbordet. Webcert följer den standard som finns för
       webbläsare och du kan använda "Tab" för att hoppa mellan ifyllnadsrutor i ett intygsutkast. I de fall
       ett fält utgörs av val i form av radioknappar används tangentbordets piltangenter för att navigera
-      mellan valen. För att markera ett val i en kryssruta eller radioknapp använd "Mellanslag"-tangenten.
-    </p>
+      mellan valen. För att markera ett val i en kryssruta eller radioknapp använd "Mellanslag"-tangenten. </p>
 
     <h4>Finns det några kortkommandon?</h4>
 
     <p>
       Vid ifyllnad av sjukskrivningsperiod. När du fyllt i ett 'från och med' datum kan du i 'till och med'
       datumet skriva in exempel 5d, 5v eller 5m. Då sätts slutdatum för perioden automatiskt till 5
-      dagar/veckor/månader efter 'från och med' datumet.
+      dagar/veckor/månader efter 'från och med' datumet. </p>
+
+    <!-- Sekretessmarkering -->
+    <h4>Vad innebär det att en patient har en sekretessmarkering?</h4>
+
+    <p>
+      Att en patient har en sekretessmarkering, betyder att Skatteverket har bedömt att patientens personuppgifter är
+      extra viktiga att skydda. Det finns speciella riktlinjer om hur personuppgifter för invånare med
+      sekretessmarkering ska hanteras. I Webcert innebär det att:<br>
+    <ul>
+      <li>Endast läkare och tandläkare kan skapa intyg för dessa patienter.</li>
+      <li>Endast läkare och tandläkare, inloggade på den vårdenhet intyget förskrevs kan se och hantera intyget.</li>
+      <li>Det är synligt i alla bildskärmsfönster att patienten har en sekretessmarkering.</li>
+      <li>En utredning kring intyget och dess mottagare måste ske innan ett intyg kan tillåtas skrivas och skickas
+        elektroniskt. Vilket är orsaken till att alla intyg inte går att utfärda för patienter med sekretessmarkering.
+      </li>
+    </ul>
     </p>
+
+    <h4>Kan jag skriva intyg för en patient med sekretessmarkering? </h4>
+
+    <p>Ja, läkare kan skriva försäkringskassans intyg, dödsbevis och dödsorsaksintyg för patienter med en
+      sekretessmarkering.<br><br>
+      En vårdadministratör kan inte hantera intyg för en patient med sekretessmarkering.</p>
   </div>
 
 
@@ -284,8 +303,7 @@
 
     <p>
       Intyget sparas hela tiden automatiskt under utfärdandet. Om du stänger webbläsaren innan intyget har
-      hunnit sparas får du en varning.
-    </p>
+      hunnit sparas får du en varning. </p>
   </div>
 
 
@@ -296,22 +314,19 @@
     <h4>Varför syns inte skicka-knappen?</h4>
 
     <p>
-      Du har inte signerat intyget, skicka-knappen är endast tillgänglig för ett signerat intyg.
-    </p>
+      Du har inte signerat intyget, skicka-knappen är endast tillgänglig för ett signerat intyg. </p>
 
     <h4>När ska jag skicka intyget till Försäkringskassan?</h4>
 
     <p>
-      Intyg ska endast skickas till Försäkringskassan om samtliga tre punkter är uppfyllda:
-    </p>
+      Intyg ska endast skickas till Försäkringskassan om samtliga tre punkter är uppfyllda: </p>
     <ul>
       <li>Sjukskrivningen kommer att vara längre än 14 dagar.</li>
       <li>Patienten kommer att ansöka om sjukpenning.</li>
       <li>Patienten kan eller vill inte skicka intyget från Mina intyg.</li>
     </ul>
     <p>
-      Tänk på att ett intyg alltid ska skickas till Försäkringskassan i samråd med patienten.
-    </p>
+      Tänk på att ett intyg alltid ska skickas till Försäkringskassan i samråd med patienten. </p>
   </div>
 
   <!-- FRÅGA OCH SVAR  ------------>
@@ -321,24 +336,21 @@
     <h4>Hur ställer jag en fråga till Försäkringskassan?</h4>
 
     <p>
-      Funktionen för fråga och svar blir tillgänglig först när intyget är signerat och skickat till Försäkringskassan.
-    </p>
+      Funktionen för fråga och svar blir tillgänglig först när intyget är signerat och skickat till
+      Försäkringskassan. </p>
     <p>
-      Du kan då från samma vy som det signerade intyget klicka på knappen Ny fråga till Försäkringskassan.
-    </p>
+      Du kan då från samma vy som det signerade intyget klicka på knappen Ny fråga till Försäkringskassan. </p>
 
     <h4>Hur vet jag om det har kommit en fråga eller ett svar från Försäkringskassan?</h4>
 
     <p>
       När en fråga inkommit blir du i ditt journalsystem notifierad om att en ny fråga inkommit.
-      När du öppnar intyget frågan avser i Webcert, kan du se frågor relaterade till det intyget.
-    </p>
+      När du öppnar intyget frågan avser i Webcert, kan du se frågor relaterade till det intyget. </p>
 
     <h4>En fråga har besvarats via brev och ligger därmed kvar som obesvarad i Webcert. Hur tar jag bort frågan?</h4>
 
     <p>
-      Klicka i boxen "Markera som hanterad" intill frågan. Frågan flyttas då till Tidigare frågor och svar.
-    </p>
+      Klicka i boxen "Markera som hanterad" intill frågan. Frågan flyttas då till Tidigare frågor och svar. </p>
   </div>
 
   <h3>Tekniska frågor</h3>
@@ -347,6 +359,5 @@
 
   <p>
     För att använda Webcert ska du använda Internet Explorer 9 eller en efterföljande version.
-    Webbläsarna Chrome och Edge stödjer inte den metod som Webcert använder för att skapa signaturer.
-  </p>
+    Webbläsarna Chrome och Edge stödjer inte den metod som Webcert använder för att skapa signaturer. </p>
 </div>
