--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/_wc-uv-override.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/_wc-uv-override.scss
@@ -27,3 +27,11 @@ uv-table {
     }
   }
 }
+
+uv-render-components {
+  h3, h4, h5, uv-no-value span {
+    .revoked-certificate & {
+      color: #aaa;
+    }
+  }
+}
