INTYG-4364: Textkolumner i headern på MI anpassa intyg (lisjp/fk7263) flödena stackas nu i mobilläge.

--- a/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/step1.header.html
+++ b/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/step1.header.html
@@ -4,6 +4,6 @@
       <span id="customizeCertificateHeader" message key="lisjp.customize.step.1.pagetitle"></span>
     </h1>
   </div>
-  <div class="col-xs-6" message key="lisjp.customize.step.1.pageingress.left"></div>
-  <div class="col-xs-6" message key="lisjp.customize.step.1.pageingress.right"></div>
+  <div class="col-xs-12 col-sm-6" message key="lisjp.customize.step.1.pageingress.left"></div>
+  <div class="col-xs-12 col-sm-6" message key="lisjp.customize.step.1.pageingress.right"></div>
 </div>
