--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/step2.header.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/step2.header.html
@@ -4,6 +4,6 @@
       <span id="customizeCertificateHeader" message key="fk7263.customize.step.2.pagetitle"></span>
     </h1>
   </div>
-  <div class="col-xs-6" message key="fk7263.customize.step.2.pageingress.left"></div>
-  <div class="col-xs-6" message key="fk7263.customize.step.2.pageingress.right"></div>
+  <div class="col-xs-12 col-sm-6" message key="fk7263.customize.step.2.pageingress.left"></div>
+  <div class="col-xs-12 col-sm-6" message key="fk7263.customize.step.2.pageingress.right"></div>
 </div>
