INTYG-4202: Dödbevis utkastvy frontend

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -106,6 +106,7 @@
   @import 'gui/formly/prognos.scss';
   @import 'gui/formly/sjukskrivningar.scss';
   @import 'gui/formly/underlag.scss';
+  @import 'gui/formly/vagueDate.scss';
   @import 'gui/formly/wrapper/wcFraga.scss';
   @import 'gui/wcFragaKomplettering.directive.scss';
   @import 'gui/wcHelpChevron.directive.scss';
