--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -108,6 +108,7 @@
   @import 'gui/formly/underlag.scss';
   @import 'gui/formly/vagueDate.scss';
   @import 'gui/formly/wrapper/wcFraga.scss';
+  @import 'gui/wcFormLabel.scss';
   @import 'gui/wcFragaKomplettering.directive.scss';
   @import 'gui/wcHelpChevron.directive.scss';
   @import 'gui/wcHelpChevronText.directive.scss';
