--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateHeader/miCompactCertificateHeader.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateHeader/miCompactCertificateHeader.directive.scss
@@ -13,6 +13,10 @@ mi-compact-certificate-header {
   }
 
   .cert-type-title {
+    a {
+      color: $mi-intyg-header-color;
+      cursor: pointer;
+    }
     h1 {
       overflow: hidden;
       text-overflow: ellipsis;
